--- a/aws/eks-cluster.yaml
+++ b/aws/eks-cluster.yaml
@@ -4,10 +4,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
 
 Parameters:
-  IAMRoleName:
-    Type: String
-    Default: EKSRole
-
   VpcBlock:
     Type: String
     Default: 192.168.0.0/16
@@ -59,26 +55,26 @@ Resources:
                 - eks.amazonaws.com
             Action:
               - 'sts:AssumeRole'
-      RoleName: !Ref IAMRoleName
+      RoleName: !Sub '${AWS::StackName}-cluster-role'
       ManagedPolicyArns:
         - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
         - arn:aws:iam::aws:policy/AmazonEKSServicePolicy
 
   EKSCluster:
-  Type: AWS::EKS::Cluster
-  Properties:
-    Name: !Sub '${AWS::StackName}-cluster'
-    RoleArn:
-      "Fn::GetAtt": ["EKSIAMRole", "Arn"]
-    ResourcesVpcConfig:
-      SecurityGroupIds:
-      - !Ref ControlPlaneSecurityGroup
-      SubnetIds:
-      - !Ref PublicSubnet01
-      - !Ref PublicSubnet02
-      - !Ref PrivateSubnet01
-      - !Ref PrivateSubnet02
-  DependsOn: [EKSIAMRole, PublicSubnet01, PublicSubnet02, PrivateSubnet01, PrivateSubnet02, ControlPlaneSecurityGroup]
+    Type: AWS::EKS::Cluster
+    Properties:
+      Name: !Sub '${AWS::StackName}-cluster'
+      RoleArn:
+        "Fn::GetAtt": ["EKSIAMRole", "Arn"]
+      ResourcesVpcConfig:
+        SecurityGroupIds:
+        - !Ref ControlPlaneSecurityGroup
+        SubnetIds:
+        - !Ref PublicSubnet01
+        - !Ref PublicSubnet02
+        - !Ref PrivateSubnet01
+        - !Ref PrivateSubnet02
+    DependsOn: [EKSIAMRole, PublicSubnet01, PublicSubnet02, PrivateSubnet01, PrivateSubnet02, ControlPlaneSecurityGroup]
 
   VPC:
     Type: AWS::EC2::VPC
@@ -298,6 +294,47 @@ Resources:
     Properties:
       GroupDescription: Cluster communication with worker nodes
       VpcId: !Ref VPC
+
+
+  EKSWorkerIAMRole:
+    Type: 'AWS::IAM::Role'
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - 'sts:AssumeRole'
+      RoleName: !Sub '${AWS::StackName}-workers-role'
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy
+        - arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly
+        - arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy
+
+  EKSNodegroup:
+    Type: 'AWS::EKS::Nodegroup'
+    Properties:
+      AmiType: 'AL2_x86_64'
+      ClusterName: !Sub '${AWS::StackName}-cluster'
+      NodeRole: !Join 
+        - ''
+        - - 'arn:aws:iam::'
+          - !Ref 'AWS::AccountId'
+          - ':role/'
+          - !Ref 'AWS::StackName'
+          - '-workers-role'
+      ScalingConfig:
+        MinSize: 1
+        DesiredSize: 1
+        MaxSize: 1
+      Subnets: 
+        - !Ref PrivateSubnet01
+        - !Ref PrivateSubnet02
+    DependsOn: [EKSWorkerIAMRole, EKSCluster]
+
 
 Outputs:
   SubnetIds:
