add sample field to chainlinknode resource

--- a/operator/config/samples/oracle_v1alpha1_chainlinknode.yaml
+++ b/operator/config/samples/oracle_v1alpha1_chainlinknode.yaml
@@ -9,4 +9,4 @@ metadata:
     app.kubernetes.io/created-by: operator
   name: chainlinknode-sample
 spec:
-  # TODO(user): Add fields here
+  foo: "Hello world!"
