--- a/operator/config/manager/kustomization.yaml
+++ b/operator/config/manager/kustomization.yaml
@@ -1,2 +1,8 @@
 resources:
 - manager.yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+images:
+- name: controller
+  newName: 310341869582.dkr.ecr.eu-central-1.amazonaws.com/chainlink-kubernetes-operator
+  newTag: 0.0.3
