--- a/operator/config/samples/kustomization.yaml
+++ b/operator/config/samples/kustomization.yaml
@@ -1,4 +1,5 @@
 ## Append samples of your project ##
 resources:
 - oracle_v1alpha1_chainlinknode.yaml
+- oracle_v1alpha1_chainlinkjob.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
