--- a/operator/config/rbac/role.yaml
+++ b/operator/config/rbac/role.yaml
@@ -69,3 +69,15 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - v1
+  resources:
+  - '*'
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
