--- a/examples/chainlink-job-1.yaml
+++ b/examples/chainlink-job-1.yaml
@@ -2,9 +2,10 @@
 apiVersion: oracle.example.com/v1alpha1
 kind: ChainlinkJob
 metadata:
-  name: job-number-one
+  name: chainlink-job-1
+  namespace: chainlink-oracle-nodes
 spec:
-  chainlinkNode: chainlink-one
+  chainlinkNode: chainlink-node-1
   jobSpec: |
     # THIS IS EXAMPLE CODE THAT USES HARDCODED VALUES FOR CLARITY.
     # THIS IS EXAMPLE CODE THAT USES UN-AUDITED CODE.
