--- a/operator/Makefile
+++ b/operator/Makefile
@@ -29,7 +29,7 @@ BUNDLE_METADATA_OPTS ?= $(BUNDLE_CHANNELS) $(BUNDLE_DEFAULT_CHANNEL)
 #
 # For example, running 'make bundle-build bundle-push catalog-build catalog-push' will build and push both
 # example.com/operator-bundle:$VERSION and example.com/operator-catalog:$VERSION.
-IMAGE_TAG_BASE ?= example.com/operator
+IMAGE_TAG_BASE ?= 310341869582.dkr.ecr.eu-central-1.amazonaws.com/chainlink-kubernetes-operator
 
 # BUNDLE_IMG defines the image:tag used for the bundle.
 # You can use it as an arg. (E.g make bundle-build BUNDLE_IMG=<some-registry>/<project-name-bundle>:<tag>)
